# OpenSplat

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.rocm  Dockerfile.rocm6  Dockerfile.rocm6.3.3  Dockerfile.rocm6.4.0  LICENSE.txt  README.md  activate.sh  colmap.cpp  colmap.hpp  constants.hpp  cv_utils.cpp  cv_utils.hpp  docker-compose.yml  gsplat.hpp  input_data.cpp  input_data.hpp  kdtree_tensor.cpp  kdtree_tensor.hpp  model.cpp  model.hpp  nerfstudio.cpp  nerfstudio.hpp  openmvg.cpp  openmvg.hpp  openmvs.cpp  openmvs.hpp  opensfm.cpp  opensfm.hpp  opensplat.cpp  opensplat.hpp  optim_scheduler.cpp  optim_scheduler.hpp  ply.cpp  ply.hpp  point_io.cpp  point_io.hpp  (+28 more)
.github/workflows/: docker.yml  hip.yml  macos.yml  rocm6.yml  ubuntu-cpu.yml  ubuntu.yml  windows.yml
.github/workflows/cuda/: Linux-env.sh  Linux.sh  Windows-env.sh  Windows.ps1  Windows.sh
.github/workflows/rocm/: Linux.sh
AppleApp/: OpenSplat.xcconfig
OpenSplat/: OpenSplat.h
OpenSplat.xcodeproj/: project.pbxproj
OpenSplat.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
OpenSplat.xcodeproj/xcshareddata/xcschemes/: OpenSplat.xcscheme  OpenSplatExe.xcscheme
OpenSplatApp/: AppView.swift  CGImageUtils.swift  ContentView.swift  NerfStudio.swift  OpenSplat.swift  OpenSplatApp.swift  OpenSplatAppApp.swift  SplatAssetRenderer.swift  SplatShader.metal
OpenSplatApp/Assets.xcassets/TransparentBackground.imageset/: Contents.json
gsplat-hip/: backward.cuh  backward.hip  bindings.h  bindings.hip  forward.cuh  forward.hip  helpers.cuh  sh.cuh
my_build/: CMakeCache.txt  Makefile  cmake_install.cmake  opensplat
rasterizer/gsplat/: README.txt  bindings.cu  bindings.h  forward.cu  forward.cuh  helpers.cuh  noinline.h  reduce.cuh  sh.cuh
rasterizer/gsplat-cpu/: bindings.h  gsplat_cpu.cpp
rasterizer/gsplat-metal/: bindings.h  gsplat_metal.metal  gsplat_metal.mm
